<resources>
    <string name="app_name">FindMe App</string>
    <string name="splashScreenText">أهلا بك في\nمفقود</string>
    <string name="loginText_1">أدخل البيانات للاستمرار</string>
    <string name="phoneNumberLogin">البريد الالكتروني</string>
    <string name="passwordLogin">كلمة المرور</string>
    <string name="passwordForgetLogin">نسيت كلمة المرور !</string>
    <string name="loginButtonText">دخول</string>
    <string name="createAccount">إنشاء حساب !</string>
    <string name="logup_1">باحث ( مستعلم )</string>
    <string name="logup_2">مساعد بحث</string>
    <string name="logup_3">اختر نوع المستخدم للمتابعة</string>
    <string name="logup_4">لدي حساب !</string>
    <string name="logup_5">تسجيل</string>
    <string name="passwordRecovery_1">ادخل البريد الالكتروني للاستمرار</string>
    <string name="sendCodeText">تم ارسال رقم كود الي بريدك الالكتروني</string>
    <string name="enterCode_2">ادخل كود</string>
    <string name="enterCode_3">تفعيل</string>
    <string name="passwordRecoveryState">جاري معالجة طلبك</string>
    <string name="enterNewPassword">أدخل كلمة المرور الجديدة</string>
    <string name="newPassword">كلمة مرور</string>
    <string name="passwordNewButton">تغيير كلمة المرور</string>
    <string name="name">الاسم</string>
    <string name="address">العنوان</string>
    <string name="ID">صورة الهوية</string>
    <string name="send">ارسال طلب</string>
    <string name="createAccount_2">تسجيل الحساب</string>
    <string name="passwordRecovery">اعادة تعيين</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="message">Message</string>
    <string name="search">البحث</string>
    <string name="nameInCard">الاسم:</string>
    <string name="nameMe">محمد اسماعيل</string>
    <string name="age">العمر:</string>
    <string name="ageNumber">4</string>
    <string name="contact">تواصل</string>
    <string name="details">تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل تفاصيل</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="verification">تم التحقق</string>
    <string name="missing">المفقودين</string>
    <string name="edit">تعديل</string>
    <string name="updateData">تحديث البيانات</string>
    <string name="enterData">أدخل البيانات للاستمرار</string>
    <string name="phone">رقم الهاتف</string>
    <string name="sendOrder">ارسال الطلب</string>
    <string name="notification">الإشعارات</string>
    <string name="pleasWriterInfo">يرجا إضافة تفاصيل الطفل وأين تم مشاهدته أخر مره</string>
    <string name="pleasEditInfo">يرجا تعديل تفاصيل الطفل وأين تم مشاهدته أخر مره</string>
    <string name="description">الوصف</string>
    <string name="image">صور</string>
    <string name="email">البريد الاكتروني</string>
    <string name="editPost">تعديل المنشور</string>
    <string name="editBtn">تعديل</string>
</resources>