<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".view.login.Login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/ajannatlt"
                android:text="@string/loginText_1"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/phoneNumberLogin"
                android:textColorHint="@color/white"
                app:boxStrokeColor="#FF0000"
                app:boxStrokeWidth="2dp"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ajannatlt"
                    android:inputType="text"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/passwordLogin"
                android:textColorHint="@color/white"
                app:boxStrokeColor="#FF0000"
                app:boxStrokeWidth="2dp"
                app:layout_constraintBottom_toTopOf="@+id/PasswordForget"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ajannatlt"
                    android:inputType="text"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/PasswordForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/ajannatlt"
                android:text="@string/passwordForgetLogin"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/logIn"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/ajannatlt"
                android:text="@string/loginButtonText"
                app:layout_constraintBottom_toTopOf="@+id/createAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp"
                tools:layout_editor_absoluteX="25dp" />

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ajannatlt"
                android:text="@string/createAccount"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>